changed image in about me section and fixed overlapping in home section

--- a/static/main.css
+++ b/static/main.css
@@ -127,18 +127,20 @@ section p {
 }
 
 #home p {
-    font-size: 25px;
+    font-size: 1.5rem;
+    text-align: left;
 }
 
 #home .right-side-text{
     grid-row: 2;
     grid-column: 3;
-    text-align: left;
-    padding-left: 150px;
     padding-right: 50px;
-    align-content: left;
-    justify-content: left;
-}
+    padding-left: 175px;
+    position: relative;
+    align-content: center;
+    justify-content: center; 
+    
+} 
 
 /* ------- Project Section ------- */
 
